2002-01-24  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* cenum.cc (insert): Bugfix: iterating to the next larger
	allocation table size failed. New table size was always 0

2002-01-23 Andras Varga

	* cmodule.cc: bugfix: send..() and scheduleAt() crashed if message
        owner was set to NULL.

	* carray.cc: get() methods of cArray and cBag no longer give a warning
        if the slot is empty, but simply return NULL pointer. Warnings remained
        only in the remove() methods.

2001-11-06 Andras Varga

	* csimul.cc: bugfix: startRun() unnecessarily disabled warnings

2001-10-28 Andras Varga

	* util.cc: opp_strprettytrunc() added; indexedname() renamed to
        opp_mkindexedname() (old name still exists as macro)
        * cobject.cc, cmodule.cc, csimul.cc, cgate.cc, cpar.cc: added
        fullPath2(buffer,buflen) which produces the result in an external
        buffer; cObject::fullPath() now relies on fullPath2().

2001-10-25  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* cqueue.cc (operator=): Bugfix for stop condition in iteration
	loop

2001-09-14 Andras Varga

	* utils.cc: added opp_nextrand(long& seed)
        * cmodule.cc: display string methods reorganized

2001-09-06 Andras Varga

	* cleanup around object copying (see include/ChangeLog for details)

2001-09-01 Andras Varga

	* _CONST patches made permanent: _CONST --> const, CONSTCAST() -->
        const_cast<>() replacements

        * Makefile.bc: cenum.cc, cstruct.cc added

2001-08-30 Andras Varga

	* MPI targets added to Makefile.vc too

2001-08-11 Andras Varga

	* added _CONSTs to all copy constructors, operator=()'s and dup()'s

2001-08-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* cnetmod.cc (isLocalMachineIn): Compile-Fix: changed const to
	_CONST in argument list.

2001-08-05 Andras Varga

	* added a few dozen new _CONSTs; affects nearly all files

2001-07-29 Andras Varga

	* added a bunch of _CONSTs (see changelog entry in include/)

2001-07-11 Andras Varga
