@@ -2,6 +2,8 @@
 
 	* cenum.cc (insert): Bugfix: iterating to the next larger
 	allocation table size failed. New table size was always 0
+	(insert): check that enum strings have different keys. Otherwise
+	abort
 
 2002-01-23 Andras Varga
 
